--- a/approoms/templates/app/dastyle_v1.1/index.html
+++ b/approoms/templates/app/dastyle_v1.1/index.html
@@ -44,7 +44,7 @@
             <!--end logo-->
             <div class="menu-content h-100" data-simplebar>
                 <ul class="metismenu left-sidenav-menu">
-                    <li class="menu-label mt-0">Main</li>
+                    <li class="menu-label mt-0">Main too</li>
                     <li>
                         <a href="javascript: void(0);"> <i data-feather="home" class="align-self-center menu-icon"></i><span>Dashboard</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
                         <ul class="nav-second-level" aria-expanded="false">
